added reply functionlity
